--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
       <meta name="theme-color" content="#000000" />
       <meta
          name="description"
-         content="Web site created using create-react-app"
+         content="Internet shop - Shopka"
       />
+      <link rel="manifest" href="manifest.json">
       <title>Shopka</title>
    </head>
    <body>
